--- a/fbcss.css
+++ b/fbcss.css
@@ -43,12 +43,12 @@ input{
     border: 1px solid rgb(219, 218, 218);
     border-radius: 10px;
 } 
- form h2{
+ /* form h2{
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(92, 92, 255);
     font-weight: bolder;
-}
+} */
 input[placeholder]
 {
     font-size: 17px;
