--- a/fbcss.css
+++ b/fbcss.css
@@ -86,5 +86,5 @@ a:hover{
     border:1px solid transparent;
     border-radius: 10px;
     font-size: 17px;
-    font-weight: bolder;
+    font-weight: bold;
 }
